--- a/core/app/views/Outbounds/edit.html
+++ b/core/app/views/Outbounds/edit.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html' /}
-#{set title:'新建出库单' /}
+#{set title:'编辑出库单' /}
 #{set 'moreScripts'}
     #{script 'outbounds/blank.js'/}
 #{/set}
@@ -12,7 +12,7 @@
 #{errorMsgs /}
 #{flash_alert/}
 
-#{form @Outbounds.create(), method:'POST', id: 'new_outbound'}
+#{form @Outbounds.update(), method:'POST', id: 'new_outbound'}
     #{info_row title:'出库单'/}
 <div class="row-fluid">
   <div class="span12">
@@ -20,14 +20,15 @@
       <tr>
         <th>出库单ID</th>
         <td><input type="text" name="outbound.id" value="${outbound?.id}" readonly/></td>
-        <th>状态</th>
-        <td><input type="text" value="${outbound.status?.label()}" readonly></td>
         <th>B2B选项</th>
         <td>
           <label class="checkbox">
-            <input type="checkbox" name="outbound.isb2b" value="true"> B2B
+            <input type="checkbox" name="outbound.isb2b" value="true"
+                #{if outbound.projectName=='B2B'} checked #{/if}> B2B
           </label>
         </td>
+        <th>状态</th>
+        <td style="background-color:${outbound.status.rgb()}"><b>${outbound.status.label()}</b></td>
       </tr>
       <tr>
         <th>目的国家</th>
@@ -42,12 +43,12 @@
       </tr>
       <tr>
         <th>出库单名称<span style="color:red">*</span></th>
-        <td><input type="text" class="span8" name="outbound.name" required></td>
+        <td><input type="text" class="span8" name="outbound.name" value="${outbound.name}" required></td>
         <th>出库类型</th>
         <td>
           <select name="outbound.type">
               #{list items:models.whouse.Outbound.T, as:'t'}
-                <option value="${t.name()}">${t.label()}</option>
+                <option value="${t.name()}" #{if outbound.type==t} selected #{/if}>${t.label()}</option>
               #{/list}
           </select>
         </td>
@@ -87,28 +88,30 @@
       </tr>
       <tr>
         <th>出库日期<span style="color:red">*</span></th>
-        <td><input type="date" name="outbound.outboundDate" required></td>
+        <td><input type="date" name="outbound.outboundDate" value="${outbound.outboundDate}" required></td>
         <th>发货人</th>
         <td>
           <select name="outbound.consignor.id" class="inline selectize" style="width:120px;">
             <option value="">发货人</option>
               #{list items:users, as:'u'}
-                <option value="${u.id}">${u.username}</option>
+                <option value="${u.id}" #{if outbound.consignor?.id==u.id}selected#{/if}>${u.username}</option>
               #{/list}
           </select>
         </td>
         <th>创建人</th>
-        <td><input type="text" value="" readonly="true"></td>
+        <td><input type="text" value="${outbound.creator?.username}" readonly="true"></td>
       </tr>
       <tr>
         <th>备注</th>
         <td colspan="5">
-          <textarea name="outbound.memo" rows="4" class="input-block-level"></textarea>
+          <textarea name="outbound.memo" rows="4" class="input-block-level">${outbound.memo}</textarea>
         </td>
       </tr>
       <tr>
         <td colspan="6">
-          <button class="btn btn-primary" name="create_record">创建</button>
+            #{if outbound.status.name()=='Create'}
+              <button class="btn btn-primary" name="create_record">更新</button>
+            #{/if}
           <a href="@{Outbounds.index()}" class="btn btn-success">取消</a>
         </td>
       </tr>
@@ -118,54 +121,10 @@
     #{info_row title:'已添加进入【出库单】的【采购单元】'/}
 <div class="row-fluid">
   <div class="span12">
-    <table class="table table-condensed table-bordered">
-      <tr>
-        <th><input type="checkbox"></th>
-        <th>采购计划ID</th>
-        <th>采购单</th>
-        <th>Selling</th>
-        <th>SKU</th>
-        <th>产品名称</th>
-        <th>供应商</th>
-        <th>去往仓库</th>
-        <th>运输方式</th>
-        <th>FBA-ShipmentId</th>
-        <th>预计运输时间</th>
-        <th>计划出库数量</th>
-        <th>实际出库数量</th>
-        <th>包装信息</th>
-        <th>仓库名称</th>
-        <th>收货入库记录ID</th>
-        <th>阶段</th>
-      </tr>
-        #{list items:units, as:'unit'}
-          <tr class="text-center">
-            <td>
-              <input type="checkbox" name="dtos[${unit_index-1}].unitId" value="${unit.id}">
-              <input type="hidden" name="pids" value="${unit.id}">
-            </td>
-            <td>${unit.id}</td>
-            <td>${unit.deliveryment.id}</td>
-            <td>${unit.selling?.sellingId}</td>
-            <td>${unit.product.sku}</td>
-            <td>${unit.product.abbreviation}</td>
-            <td>${unit.cooperator?.name}</td>
-            <td>${unit.whouse?.name()}</td>
-            <td>${unit.shipType?.label()}</td>
-            <td>${unit.fba?.shipmentId}</td>
-            <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
-            <td>${unit.availableQty}</td>
-            <td>${unit.outQty}</td>
-            <td>
-              <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
-            </td>
-            <td></td>
-            <td></td>
-            <td>${unit.stage?.label()}</td>
-          </tr>
-        #{/list}
-    </table>
-    <button class="btn btn-danger">解除</button>
+      #{render 'Outbounds/_units.html', units:outbound.units, is_check: true/}
+      #{if outbound.status.name()=='Create'}
+        <button class="btn btn-danger">解除</button>
+      #{/if}
   </div>
 </div>
 
