--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -2,113 +2,137 @@
 #{set title:"出库单列表"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
+    #{script 'outbounds/blank.js'/}
 #{/set}
+<style>
+  .table td{
+    vertical-align:middle;
+  }
+</style>
 #{errorMsgs /}
 #{flash_alert /}
 
 <div class="row-fluid">
   <form action="@{Outbounds.index()}" method="get" class="search_form" id="search_Form">
-    <div class="row-fluid">
-      <div class="span12">
-        <div class="input-prepend input-append inline">
-          <span class="add-on">From:</span>
-          <input type="date" name="p.from" value="">
-          <span class="add-on">To:</span>
-          <input type="date" name="p.to" value="">
-        </div>
-
-        <select name="p.dateType" class="inline">
-          <option value="">状态</option>
-        #{list items:models.whouse.Outbound.S, as:'t'}
-          <option value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
-          <option value="">供应商</option>
-        #{list items:cooperators, as:'cop'}
-          <option value="${cop.id}">${cop.name}</option>
-        #{/list}
-        </select>
-
-        <select name="p.dateType" class="inline">
-          <option value="">收货类型</option>
-        #{list items:models.whouse.Inbound.T, as:'t'}
-          <option value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <div class="input-prepend input-append inline">
-          <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
-          <input type="hidden" name="p.page" value="${p.page}">
-          <button class="btn btn-primary" data-loading>搜索</button>
-        </div>
+    <div class="span12">
+      <div class="input-prepend input-append inline">
+        <span class="add-on">From:</span>
+        <input type="date" name="p.from" value="${p.from.date()}">
+        <span class="add-on">To:</span>
+        <input type="date" name="p.to" value="${p.to.date()}">
       </div>
 
-      <div class="row-fluid">
-        <div class="span12">
-          <div class="inline">
-            <a href="javascript:void(0)" data-url="@{Ou.blank()}" class="btn btn btn-info inline"
-               id="createInbound">确认出库</a>
-            <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary inline"
-               id="createInboundBtn">导出</a>
-          </div>
-        </div>
-      </div>
+      <select name="p.status" class="inline">
+        <option value="">状态</option>
+      #{list items:models.whouse.Outbound.S, as:'s'}
+        <option #{if p.status==s} selected #{/if} value="${s.name()}">${s.label()}</option>
+      #{/list}
+      </select>
 
+      <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
+        <option value="">供应商</option>
+      #{list items:cooperators, as:'cop'}
+        <option value="${cop.id}">${cop.name}</option>
+      #{/list}
+      </select>
+
+      <select name="p.type" class="inline">
+        <option value="">出库类型</option>
+      #{list items:models.whouse.Outbound.T, as:'t'}
+        <option #{if t==p.type} selected #{/if} value="${t.name()}">${t.label()}</option>
+      #{/list}
+      </select>
+
+      <select name="p.type" class="inline">
+        <option value="">目的国家</option>
+      #{list items:tragets, as:'t'}
+        <option value="${t.id}">${t.name}</option>
+      #{/list}
+      </select>
+
+      <div class="input-prepend input-append inline">
+        <span class="add-on"><i class="icon-search"></i></span>
+        <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
+        <input type="hidden" name="p.page" value="${p.page}">
+        <button class="btn btn-primary" data-loading>搜索</button>
+      </div>
     </div>
+
     <div class="row-fluid">
       <div class="span12">
-        <table class="table table-condensed table-bordered">
-          <tr>
-            <th style="width:15px;">
-              <input type="checkbox">
-            </th>
-            <th>出库单ID</th>
-            <th>名称</th>
-            <th>目的国家</th>
-            <th>供应商</th>
-            <th>项目名称</th>
-            <th>出库类型</th>
-            <th>状态</th>
-            <th>运输方式</th>
-            <th>货代公司</th>
-            <th width="150px;">出库日期</th>
-            <th>发货人</th>
-            <th>备注</th>
-          </tr>
-        #{list items: outbounds, as: 'o'}
-          <tr>
-            <td><input type="checkbox" value="${o.id}"></td>
-            <td><a href="@{Outbounds.edit(o.id)}">${o.id}</a></td>
-            <td>${o.name}</td>
-            <td></td>
-            <td>${o.cooperator?.name}</td>
-            <td>${o.projectName}</td>
-            <td>${o.type?.label()}</td>
-            <td>${o.status?.label()}</td>
-            <td></td>
-            <td></td>
-            <td>#{time_tooltip time:o.outboundDate, datetime:true/}</td>
-            <td>${o.consignor?.username}</td>
-            <td title="${o.memo}">${o.memo}</td>
-          </tr>
-        #{/list}
-          <tr>
-            <td colspan="13">
-            #{if outbounds.size() == 0}
-              暂时还没有入库记录
-            #{/if}
-            #{else }
-                #{bootstrap_pager pi:p, url:'' /}
-            #{/else}
-            </td>
-          </tr>
-        </table>
+        <div class="inline">
+          <a href="javascript:void(0)" class="btn btn btn-info" id="confirmOutboundBtn">确认出库</a>
+          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary inline"
+             id="createInboundBtn">导出</a>
+        </div>
       </div>
     </div>
   </form>
 </div>
+
+<div class="row-fluid">
+  <form method="post" id="submit_form" action="@{Outbounds.confirmOutBound()}">
+    <div class="span12">
+      <table class="table table-condensed table-bordered">
+        <tr>
+          <th style="width:15px;">
+            <input type="checkbox">
+          </th>
+          <th width="120px;">出库单ID</th>
+          <th>名称</th>
+          <th width="80px;">目的国家</th>
+          <th width="200px;">项目名称</th>
+          <th width="80px;">状态</th>
+          <th width="80px;">运输方式</th>
+          <th width="100px;">出库类型</th>
+          <th width="100px;">货代公司</th>
+          <th width="120px;">出库日期</th>
+          <th>发货人</th>
+          <th width="100px;">运输单</th>
+          <th>备注</th>
+        </tr>
+      #{list items: outbounds, as: 'o'}
+        <tr>
+          <td><input type="checkbox" name="ids" value="${o.id}"></td>
+          <td><a href="@{Outbounds.edit(o.id)}">${o.id}</a></td>
+          <td style="cursor:pointer;" data-toggle="toggle" data-target="#ptc_${o_index}">
+            <span><i class="icon-reorder"></i></span>
+            <span>${o.name}</span>
+            <span class="badge badge-info">${o.units.size()}</span>
+          </td>
+          <td>${o.whouse?.name}</td>
+          <td>${o.projectName}</td>
+          <td style="background-color:${o.status.rgb()}">${o.status?.label()}</td>
+          <td style="color:${o.shipType.rgb()}">${o.shipType?.label()}</td>
+          <td>${o.type?.label()}</td>
+          <td>${o.showCompany()}</td>
+          <td>#{time_tooltip time:o.outboundDate/}</td>
+          <td>${o.consignor?.username}</td>
+          <td>${o.shipmentId}</td>
+          <td title="${o.memo}">${o.memo.overLong()}</td>
+        </tr>
+        <tr id="ptc_${o_index}" style="display:none;">
+          <td colspan="14">
+            <div>
+                #{render 'Outbounds/_units.html', units:o.units, is_check: false/}
+            </div>
+          </td>
+        </tr>
+      #{/list}
+        <tr>
+          <td colspan="14">
+          #{if outbounds.size() == 0}
+            暂时还没有入库记录
+          #{/if}
+          #{else }
+              #{bootstrap_pager pi:p, url:'' /}
+          #{/else}
+          </td>
+        </tr>
+      </table>
+    </div>
+  </form>
+</div>
+
 
 
