--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -2,97 +2,120 @@
 #{set title:"退货单列表"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
+    #{script 'refunds/index.js'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
 
 <div class="row-fluid">
   <form action="@{Refunds.index()}" method="get" class="search_form" id="search_Form">
+    <div class="span12">
+      <div class="input-prepend input-append inline">
+        <span class="add-on">From:</span>
+        <input type="date" name="p.from" value="">
+        <span class="add-on">To:</span>
+        <input type="date" name="p.to" value="">
+      </div>
+
+      <select name="p.dateType" class="inline">
+        <option value="">状态</option>
+      #{list items:models.whouse.Refund.S, as:'t'}
+        <option value="${t.name()}">${t.label()}</option>
+      #{/list}
+      </select>
+
+      <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
+        <option value="">供应商</option>
+      #{list items:cooperators, as:'cop'}
+        <option value="${cop.id}">${cop.name}</option>
+      #{/list}
+      </select>
+
+      <select name="p.dateType" class="inline">
+        <option value="">收货类型</option>
+      #{list items:models.whouse.Refund.T, as:'t'}
+        <option value="${t.name()}">${t.label()}</option>
+      #{/list}
+      </select>
+
+      <div class="input-prepend input-append inline">
+        <span class="add-on"><i class="icon-search"></i></span>
+        <input type="text" class="input-medium" name="p.search" placeholder="搜索ID自动识别" value="${p.search}">
+        <input type="hidden" name="p.page" value="${p.page}">
+        <button class="btn btn-primary" data-loading>搜索</button>
+      </div>
+    </div>
+
     <div class="row-fluid">
       <div class="span12">
-        <div class="input-prepend input-append inline">
-          <span class="add-on">From:</span>
-          <input type="date" name="p.from" value="">
-          <span class="add-on">To:</span>
-          <input type="date" name="p.to" value="">
-        </div>
-
-        <select name="p.dateType" class="inline">
-          <option value="">状态</option>
-        #{list items:models.whouse.Refund.S, as:'t'}
-          <option value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
-          <option value="">供应商</option>
-        #{list items:cooperators, as:'cop'}
-          <option value="${cop.id}">${cop.name}</option>
-        #{/list}
-        </select>
-
-        <select name="p.dateType" class="inline">
-          <option value="">收货类型</option>
-        #{list items:models.whouse.Refund.T, as:'t'}
-          <option value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <div class="input-prepend input-append inline">
-          <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" placeholder="搜索ID自动识别" value="${p.search}">
-          <input type="hidden" name="p.page" value="${p.page}">
-          <button class="btn btn-primary" data-loading>搜索</button>
+        <div class="inline">
+          <a href="javascript:void(0)" class="btn btn btn-info" id="confirmRefundBtn">确认退货</a>
+          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary inline"
+             id="createInboundBtn">导出</a>
         </div>
       </div>
     </div>
-    <div class="row-fluid">
-      <div class="span12">
-        <table class="table table-condensed table-bordered">
-          <tr>
-            <th style="width:15px;">
-              <input type="checkbox">
-            </th>
-            <th>退货单ID</th>
-            <th>名称</th>
-            <th>物流信息</th>
-            <th>供应商</th>
-            <th>项目名称</th>
-            <th>退货类型</th>
-            <th>状态</th>
-            <th width="150px;">退货日期</th>
-            <th width="200px;">制单人</th>
-            <th>仓库交接人</th>
-            <th>备注</th>
-          </tr>
-        #{list items: refunds, as: 'r'}
-          <tr>
-            <td><input type="checkbox" value="${r.id}"></td>
-            <td><a href="@{Refunds.edit(r.id)}">${r.id}</a></td>
-            <td>${r.name}</td>
-            <td>${r.info}</td>
-            <td>${r.cooperator?.name}</td>
-            <td>${r.projectName}</td>
-            <td>${r.type?.label()}</td>
-            <td>${r.status?.label()}</td>
-            <td>#{time_tooltip time:r.refundDate, datetime:true/}</td>
-            <td>${r.creator?.username}</td>
-            <td>${r.whouseUser?.username}</td>
-            <td title="${r.memo}">${r.memo}</td>
-          </tr>
-        #{/list}
-          <tr>
-            <td colspan="12">
-            #{if refunds.size() == 0}
-              暂时还没有入库记录
-            #{/if}
-            #{else }
-                #{bootstrap_pager pi:p, url:'' /}
-            #{/else}
-            </td>
-          </tr>
-        </table>
-      </div>
+  </form>
+</div>
+
+<div class="row-fluid">
+  <form method="post" id="submit_form" action="@{Refunds.confirmRefund()}">
+    <div class="span12">
+      <table class="table table-condensed table-bordered">
+        <tr>
+          <th style="width:15px;">
+            <input type="checkbox">
+          </th>
+          <th>退货单ID</th>
+          <th width="250px;">名称</th>
+          <th>物流信息</th>
+          <th>供应商</th>
+          <th>项目名称</th>
+          <th>退货类型</th>
+          <th>状态</th>
+          <th width="150px;">退货日期</th>
+          <th width="100px;">制单人</th>
+          <th width="100px;">仓库交接人</th>
+          <th width="200px;">备注</th>
+        </tr>
+      #{list items: refunds, as: 'r'}
+        <tr>
+          <td><input type="checkbox" name="ids" value="${r.id}"></td>
+          <td><a href="@{Refunds.edit(r.id)}">${r.id}</a></td>
+          <td style="cursor:pointer;" data-toggle="toggle" data-target="#ptt_${r_index}">
+            <span><i class="icon-reorder"></i></span>
+            <span>${r.name}</span>
+            <span class="badge badge-info">${r.unitList.size()}</span>
+          </td>
+          <td>${r.info}</td>
+          <td>${r.cooperator?.name}</td>
+          <td>${r.projectName}</td>
+          <td>${r.type?.label()}</td>
+          <td style="background-color:${r.status.rgb()}">${r.status?.label()}</td>
+          <td>#{time_tooltip time:r.refundDate/}</td>
+          <td>${r.creator?.username}</td>
+          <td>${r.whouseUser?.username}</td>
+          <td title="${r.memo}">${r.memo}</td>
+        </tr>
+        <tr id="ptt_${r_index}" style="display:none;">
+          <td colspan="12">
+            <div>
+                #{render 'Refunds/_units.html', units:r.unitList, is_check: false/}
+            </div>
+          </td>
+        </tr>
+      #{/list}
+        <tr>
+          <td colspan="12">
+          #{if refunds.size() == 0}
+            暂时还没有入库记录
+          #{/if}
+          #{else }
+              #{bootstrap_pager pi:p, url:'' /}
+          #{/else}
+          </td>
+        </tr>
+      </table>
     </div>
   </form>
 </div>
