--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -202,6 +202,7 @@
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
               <li class="divider"></li>
+              <li><a href="@{DeliverPlans.indexwhouse()}">出货单关联收货</a></li>
                 #{power.ck "procures.indexwhouse"}
                   <li><a href="@{ProcureUnits.indexWhouse()}">采购计划(仓库)</a></li>
                 #{/power.ck}
