*  rename whouseAttrs.js to whouseAttrs.es6

--- a/core/app/views/Products/whouseAttrs.html
+++ b/core/app/views/Products/whouseAttrs.html
@@ -6,7 +6,7 @@
     #{script 'localResize.ui.coffee'/}
     #{script 'jquery.filedrop.js' /}
     #{script 'component/dropUpload.coffee'/}
-    #{script 'products/whouseAttrs.js'/}
+    #{script 'products/whouseAttrs.es6'/}
 #{/set}
 
 <div class="row-fluid">
