--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -6,7 +6,6 @@
 #{/set}
 #{flash_alert /}
 
-
 <form action="@{StockRecords.index()}" method="get" class="search_form" id="search_form">
   <div class="row-fluid">
     <div class="span12">
@@ -34,51 +33,48 @@
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
 
-      <a href="javascript:void(0)" data-url="@{Excels.stockRecords(p)}" data-target="_blank" class="btn btn-info
-      inline" id="exportBtn">
+      <a href="javascript:void(0)" data-url="@{Excels.stockRecords(p)}" data-target="_blank" class="btn btn-info inline"
+         id="exportBtn">
         开始盘点
       </a>
       <div class="inline">
       </div>
     </div>
 
-
     <div class="row-fluid">
       <div class="span12">
         <table class="table table-condensed table-bordered">
           <tr>
+            <th>ID</th>
             <th>仓库</th>
-            <th>物料编码</th>
+            <th>采购计划ID</th>
+            <th>Selling</th>
+            <th>SKU</th>
             <th>名称</th>
             <th>FBA</th>
             <th>FBA 仓库</th>
             <th>运输方式</th>
+            <th>项目名称</th>
             <th>异动时间</th>
             <th>异动数量</th>
-            <th>异动来源</th>
-            <th>记录 ID</th>
+            <th>异动类型</th>
+            <th>来源记录ID</th>
           </tr>
         #{list items: records, as: 'r'}
-            #{set preRecord: r_isFirst ? null : records.get(r_index - 2)/}
-            #{set atts: r.stockObj.attributes()/}
-          <tr class="${atts.get('fba') != null && atts.get('fba') != preRecord?.stockObj?.attributes()?.get('fba')? 'striped' : ''}">
-            <td>
-                #{if r.whouse.name != preRecord?.whouse?.name}
-                  ${r.whouse.name}
-                #{/if}
-            </td>
-            <td>
-              <a href="${r.stockObj.showStockObjLink()}" target="_blank">${r.stockObj.stockObjId}</a>
-            </td>
-            <td style="max-width: 280px;">${r.stockObj.name()}</td>
-            <td>
-            ${atts.get('fba')}
-            </td>
-            <td>${atts.get('whouseName')}</td>
-            <td>${atts.get('shipType')}</td>
+          <tr>
+            <td>${r.id}</td>
+            <td>${r.whouse?.name}</td>
+            <td>${r.unit?.id}</td>
+            <td>${r.unit?.selling?.sellingId}</td>
+            <td>${r.unit?.sku}</td>
+            <td>${r.unit?.product?.abbreviation}</td>
+            <td>${r.unit?.fba?.shipmentId}</td>
+            <td>${r.unit?.whouse?.name}</td>
+            <td>${r.unit?.shipType?.label()}</td>
+            <td>${r.unit?.projectName}</td>
             <td>#{time_tooltip time: r.createDate, datetime: true/}</td>
             <td>${r.qty}</td>
-            <td>${r.recordOrigin()}</td>
+            <td>${r.type.label()}</td>
             <td>
               <a href="${r.showRecordLink()}" target="_blank">${r.type.label()}记录 ${r.recordId}</a>
             </td>
