--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -218,15 +218,13 @@
                 #{power.ck "products.whouseattrs"}
                   <li><a href="@{Products.whouseAttrs()}">产品</a></li>
                 #{/power.ck}
-                #{power.ck "whouseitems.index"}
-                  <li><a href="@{WhouseItems.index()}">库存</a></li>
-                #{/power.ck}
                 #{power.ck "inboundrecords.index"}
                   <li><a href="@{InboundRecords.index()}">入库记录</a></li>
                 #{/power.ck}
                 #{power.ck "outboundrecords.index"}
                   <li><a href="@{OutboundRecords.index()}">出库记录</a></li>
                 #{/power.ck}
+              <li><a href="@{StockRecords.stockIndex()}">库存</a></li>
                 #{power.ck "stockrecords.index"}
                   <li><a href="@{StockRecords.index()}">库存异动</a></li>
                 #{/power.ck}
