--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -2,6 +2,7 @@
 #{set title:"收货入库列表"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
+    #{script 'inbounds/index.es6'/}
 #{/set}
 <style>
   .table td{
@@ -45,12 +46,20 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:200px;"  name="p.search" placeholder="收货入库单ID or SKU" value="${p.search}">
+          <input type="text" style="width:200px;" name="p.search" placeholder="收货入库单ID or SKU" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
+        <a class="btn btn-info" href="javascript:void(0)" id="printBtn" target="_blank">
+          <i class="icon-copy"></i> 打印收货入库四联单</a>
+
+        <a class="btn btn-success"><i class="icon-print"></i> 导出</a>
+
       </div>
     </div>
+  </form>
+
+  <form method="post" id="inboundForm">
     <div class="row-fluid">
       <div class="span12">
         <table class="table table-condensed table-bordered">
@@ -72,7 +81,7 @@
           </tr>
         #{list items: inbounds, as: 'i'}
           <tr>
-            <td><input type="checkbox" value="${i.id}"></td>
+            <td><input type="checkbox" name="ids" value="${i.id}"></td>
             <td><a href="@{Inbounds.edit(i.id)}">${i.id}</a></td>
             <td style="cursor:pointer;" data-toggle="toggle" data-target="#sr_${i_index}">
               <span><i class="icon-reorder"></i></span>
@@ -100,7 +109,7 @@
           <tr id="sr_${i_index}" style="display:none;">
             <td colspan="12">
               <div>
-                #{render 'Inbounds/_units.html', units:i.units, is_check: true/}
+                  #{render 'Inbounds/_units.html', units:i.units, is_check: true/}
               </div>
             </td>
           </tr>
