--- a/core/app/views/Outbounds/blank.html
+++ b/core/app/views/Outbounds/blank.html
@@ -21,7 +21,7 @@
         <th>出库单ID</th>
         <td><input type="text" name="outbound.id" value="${outbound?.id}" readonly/></td>
         <th>状态</th>
-        <td><input type="text" value="${outbound.status?.label()}" readonly></td>
+        <td><input type="text" value="${outbound?.status?.label()}" readonly></td>
         <th>B2B选项</th>
         <td>
           <label class="checkbox">
@@ -31,11 +31,11 @@
       </tr>
       <tr>
         <th>目的国家</th>
-        <td><input type="text" value="${outbound.whouse?.name}" readonly>
+        <td><input type="text" value="${outbound?.whouse?.name}" readonly>
         </td>
         <th>运输方式</th>
         <td>
-          <input type="text" value="${outbound.shipType?.label()}" readonly/>
+          <input type="text" value="${outbound?.shipType?.label()}" readonly/>
         </td>
         <th>运输单号</th>
         <td><input type="text" value="" readonly/></td>
