--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -51,10 +51,7 @@
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
         <a class="btn btn-info" href="javascript:void(0)" id="printBtn" target="_blank">
-          <i class="icon-copy"></i> 打印收货入库四联单</a>
-
-        <a class="btn btn-success"><i class="icon-print"></i> 导出</a>
-
+          <i class="icon-print"></i> 打印收货入库四联单</a>
       </div>
     </div>
   </form>
