--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -12,9 +12,9 @@
     <div class="span12">
       <div class="input-prepend input-append inline">
         <span class="add-on">From:</span>
-        <input type="date" name="p.from" value="">
+        <input type="date" name="p.from" value="${p.from.date()}">
         <span class="add-on">To:</span>
-        <input type="date" name="p.to" value="">
+        <input type="date" name="p.to" value="${p.to.date()}">
       </div>
 
       <select name="p.dateType" class="inline">
@@ -49,9 +49,9 @@
     <div class="row-fluid">
       <div class="span12">
         <div class="inline">
-          <a href="javascript:void(0)" class="btn btn btn-info" id="confirmRefundBtn">确认退货</a>
-          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary inline"
-             id="createInboundBtn">导出</a>
+          <a href="javascript:void(0)" class="btn btn btn-primary" id="confirmRefundBtn">确认退货</a>
+          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-info inline" id="printBtn">
+            <i class="icon-print"></i> 打印退货单</a>
         </div>
       </div>
     </div>
