*  补充缺失的 p.page input

--- a/core/app/views/Orders/btbOrderIndex.html
+++ b/core/app/views/Orders/btbOrderIndex.html
@@ -39,6 +39,7 @@
       </div>
 
       <div class="input-append input-prepend inline">
+        <input type="hidden" name="p.page" value="${p.page}">
         <button data-url='@{Orders.btbOrderIndex()}' class="btn btn-primary" data-disable-with='提交中...'>搜索</button>
         &nbsp;
       </div>
