--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -4,6 +4,11 @@
     #{script 'component/pagination.coffee'/}
     #{script 'refunds/index.js'/}
 #{/set}
+<style>
+  .table td{
+    vertical-align:middle;
+  }
+</style>
 #{errorMsgs /}
 #{flash_alert /}
 
