--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -3,6 +3,7 @@
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'inbounds/index.es6'/}
+    #{script 'inbounds/edit.js'/}
 #{/set}
 <style>
   .table td{
@@ -127,4 +128,17 @@
   </form>
 </div>
 
-
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3>FBA Carton Contents</h3>
+    <p class="muted">默认数据来源于供应商的产品</p>
+  </div>
+  <div class="modal-body">
+    <div id="refresh_div"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <a class="btn btn-primary" id="submitBoxInfoBtn" data-action="@{Inbounds.updateBoxInfo()}">提交</a>
+  </div>
+</div>
