--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -92,7 +92,7 @@
              id="createInboundBtn"><i class="icon-shopping-cart"> </i>采购收货入库单</a>
           <a href="javascript:void(0)" data-url="@{Outbounds.blank()}" class="btn btn-success inline"
              id="createOutboundBtn"><i class="icon-plane"> </i>创建出库单</a>
-          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-warning inline"
+          <a href="javascript:void(0)" data-url="@{Refunds.blank()}" class="btn btn-warning inline"
              id="createRefundBtn"><i class="icon-retweet"> </i>创建退货单</a>
           <input type="hidden" name="p.unitIds" id="unitIds"/>
           <a target="_blank" class="btn btn-primary inline" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
