--- a/core/app/views/Refunds/_units.html
+++ b/core/app/views/Refunds/_units.html
@@ -1,20 +1,20 @@
 <table class="table table-condensed table-bordered" id="unit_table">
   <tr>
-    #{if is_check}
-      <th><input type="checkbox"></th>
-    #{/if}
+  #{if is_check}
+    <th width="20px;"><input type="checkbox"></th>
+  #{/if}
     <th style="width:40px;">记录ID</th>
     <th style="width:60px;">采购计划</th>
     <th style="width:60px;">采购单</th>
     <th style="width:320px;">Selling</th>
-    <th>SKU</th>
+    <th width="200px;">SKU</th>
     <th>产品名称</th>
     <th style="width:120px;">FBA-ShipmentId</th>
     <th style="width:85px;">产品条码</th>
     <th style="width:80px;">计划退货数量</th>
     <th style="width:80px;">实际退货数量</th>
     <th style="width:60px;">包装信息</th>
-    <th style="width:80px;">去往仓库</th>
+    <th style="width:100px;">去往仓库</th>
     <th style="width:60px;">运输方式</th>
     <th style="width:45px;">阶段</th>
   </tr>
@@ -35,9 +35,14 @@
     <td>${unit.unit?.fba?.shipmentId}</td>
     <td>${unit.unit?.selling?.fnSku}</td>
     <td>${unit.planQty}</td>
-    <td><input type="text" style="width:40px;" value="${unit.qty}"></td>
+    <td><input type="text" style="width:40px;" value="${unit.qty}" #{if !is_check} readonly #{/if}></td>
     <td>
-      <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
+        #{if is_check}
+          <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
+        #{/if}
+        #{else }
+          <input type="button" class="btn btn-mini btn-info" data-id="${unit.id}" name="editBoxInfo" value="查看">
+        #{/else}
     </td>
     <td>${unit.unit?.whouse?.name()}</td>
     <td style="color:${unit.unit?.shipType?.rgb()}">${unit.unit?.shipType?.label()}</td>
