运输单创建出库单判断逻辑修改

--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -17,7 +17,7 @@
 #{list items:shipments, as:'ship'}
   <tr>
     <td>
-      <input type="checkbox" name="shipmentId" value="${ship.id}" coop="${ship.cooper?.name}" apply="${ship.applyId}"
+      <input type="checkbox" name="shipmentId" value="${ship.id}" coop="${ship.cname}" apply="${ship.applyId}"
              way="${ship.type}">
     </td>
     <td>
